# chutoro

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  debugging-plan-20260105-192546.md  dylint.toml  lcov.info  typos.local.toml  typos.toml
chutoro-bench-datasets/: Cargo.toml
chutoro-bench-datasets/src/: context.rs  driver.rs  error.rs  info.rs  lib.rs  newtypes.rs  published.rs  recipe.rs
chutoro-bench-datasets/src/newtypes/: keys.rs  mod.rs
chutoro-bench-datasets/src/ports/: fetcher.rs  mod.rs  publisher.rs  storage.rs
chutoro-bench-datasets/src/testing/: filesystem.rs  in_memory.rs  mod.rs  stub_recipe.rs
chutoro-bench-datasets/tests/: error.rs  newtypes.rs  publisher_contract.rs  recipe_api_surface.rs  recipe_bdd.rs  recipe_lifecycle.rs  recipe_proptest.rs  testing_adapters.rs
chutoro-bench-datasets/tests/features/: recipe_ports.feature
chutoro-bench-datasets/tests/trybuild/: dataset_recipe_phase_order.rs  dataset_recipe_skip_phase.rs  dataset_recipe_skip_phase.stderr  ordered_recipe_support.rs
chutoro-benches/: Cargo.toml
chutoro-benches/benches/: edge_harvest.rs  extraction.rs  hnsw.rs  hnsw_ef_sweep.rs  mst.rs  neighbour_scoring.rs
chutoro-benches/benches/internal/: quality_pass.rs
chutoro-benches/benches/neighbour_scoring/: profiling.rs  support.rs  support_tests.rs
chutoro-benches/src/: clustering_quality.rs  criterion_support.rs  ef_sweep.rs  error.rs  fs_support.rs  lib.rs  params.rs  recall.rs  source.rs
chutoro-benches/src/neighbour_scoring/: benchmark_plan.rs  benchmark_runner.rs  benchmark_support.rs  benchmark_support_tests.rs  build_profile.rs  mod.rs  profiling.rs  profiling_source_tests.rs  report.rs  report_tests.rs
chutoro-benches/src/profiling/: memory_sampler.rs  mod.rs
chutoro-benches/src/source/: errors.rs  mnist.rs  mod.rs  tests.rs  text.rs
chutoro-benches/src/source/mnist/: mod.rs  tests.rs
chutoro-benches/src/source/numeric/: generation.rs  mod.rs
chutoro-benches/tests/: benchmark_smoke.rs  neighbour_scoring_support.rs
chutoro-cli/: Cargo.toml
chutoro-cli/src/: cli.rs  lib.rs  logging.rs  main.rs
chutoro-cli/src/cli/: commands.rs  mod.rs  output.rs  test_fixtures.rs  test_helpers.rs  test_memory_guard.rs  tests.rs
chutoro-core/: Cargo.toml
chutoro-core/proptest-regressions/session/: tests.txt
chutoro-core/src/: builder.rs  chutoro.rs  clustering_quality.rs  cpu_pipeline.rs  datasource.rs  distance.rs  error.rs  lib.rs  memory.rs  result.rs  test_utils.rs
chutoro-core/src/datasource/: tests.rs
chutoro-core/src/datasource/tests/: batch_first_source.rs
chutoro-core/src/distance/: cosine.rs  euclidean.rs  helpers.rs  mod.rs  types.rs
chutoro-core/src/hierarchy/: mod.rs  single_linkage.rs  tests.rs  union_find.rs
chutoro-core/src/hierarchy/single_linkage/: condense.rs  forest.rs  mod.rs
chutoro-core/src/hnsw/: cpu.rs  distance_cache.rs  error.rs  graph.rs  helpers.rs  insert.rs  invariants.rs  kani_proofs.rs  mod.rs  node.rs  params.rs  search.rs  tests.rs  types.rs  validate.rs
chutoro-core/src/hnsw/cpu/: build.rs  collectors.rs  construction.rs  internal.rs  mod.rs  rng.rs  test_helpers.rs  tests.rs  trim.rs  unit_tests.rs
chutoro-core/src/hnsw/graph/: core.rs  mod.rs  test_helpers.rs
chutoro-core/src/hnsw/graph/test_helpers/: mod.rs  tests.rs
chutoro-core/src/hnsw/insert/: commit.rs  connectivity.rs  executor.rs  limits.rs  mod.rs  planner.rs  reciprocity.rs  reconciliation.rs  staging.rs  test_helpers.rs  types.rs
chutoro-core/src/hnsw/insert/commit/: tests.rs
chutoro-core/src/hnsw/insert/executor/: tests.rs
chutoro-core/src/hnsw/invariants/: bidirectional.rs  degree_bounds.rs  helpers.rs  layer_consistency.rs  mod.rs  reachability.rs  tests.rs
chutoro-core/src/hnsw/invariants/tests/: collection.rs  mod.rs  (+1 more)
chutoro-core/src/hnsw/kani_proofs/: bidirectional.rs  eviction.rs  invariants.rs  mod.rs
chutoro-core/src/hnsw/tests/: build.rs  cache.rs  edge_harvest.rs  errors.rs  fixtures.rs  metadata.rs  mod.rs  params.rs  sampling.rs  search.rs  support.rs  write_lock.rs
chutoro-core/src/mst/: kani.rs  kani_harness.rs  mod.rs  tests.rs  union_find.rs
chutoro-core/src/mst/property/: concurrency.rs  equivalence.rs  helpers.rs  mod.rs  oracle.rs  strategies.rs  structural.rs  tests.rs  types.rs
chutoro-core/src/mst/tests/: forest.rs  forests.rs  mod.rs
chutoro-core/src/session/: clock.rs  config.rs  core_distance.rs  mod.rs  session_impl.rs  tests.rs
chutoro-core/src/session/tests/: append.rs  builder.rs  common.rs  concurrency.rs  core_distance.rs  core_distance_errors.rs  metrics.rs  properties.rs
chutoro-core/tests/: chutoro.rs  datasource.rs  distance.rs  errors.rs  functional_ari_nmi.rs  nextest_config.rs  session_api_surface.rs  session_append_bdd.rs  tracing_support.rs
chutoro-core/tests/common/: mod.rs
chutoro-core/tests/features/: session_append.feature
chutoro-core/tests/fixtures/session_api_without_cpu/: Cargo.toml
chutoro-core/tests/trybuild/: session_api_cpu_enabled.rs  session_api_non_send_sync_source.rs  session_api_non_send_sync_source.stderr
chutoro-providers/dense/: Cargo.toml  build.rs
chutoro-providers/dense/src/: errors.rs  ingest.rs  lib.rs  provider.rs  simd.rs  source.rs  tests.rs
chutoro-providers/dense/src/simd/: dispatch.rs  kani_proofs.rs  kernels.rs  mod.rs  point_view.rs  semantics.rs  tests.rs  types.rs
chutoro-providers/dense/src/tests/: errors.rs  ingest.rs  mod.rs  provider.rs  source.rs  support.rs
chutoro-providers/dense/tests/: portable_simd_gating.rs
chutoro-providers/dense/tests/trybuild/: portable_simd_with_feature.rs  portable_simd_without_feature.rs  portable_simd_without_feature.stderr
chutoro-providers/text/: Cargo.toml
chutoro-providers/text/src/: lib.rs
chutoro-providers/text/tests/: textsource.rs
chutoro-test-support/: Cargo.toml
chutoro-test-support/src/: github_output.rs  lib.rs
chutoro-test-support/src/ci/: benchmark_regression_profile.rs  mod.rs  nightly_gate.rs  property_test_profile.rs
chutoro-test-support/tests/: benchmark_regression_gate_cli.rs  kani_nightly_gate_cli.rs
(+130 files in other folders)
