[workspace]
resolver = "3"
members = [
    "chutoro-core",
    "chutoro-cli",
    "chutoro-providers/dense",
    "chutoro-providers/text",
    "chutoro-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/leynos/chutoro"
rust-version = "1.77.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 3. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[workspace.lints.rust]
unknown_lints                       = "deny"
renamed_and_removed_lints           = "deny"
missing_docs                        = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs            = "deny"
broken_intra_doc_links              = "deny"
private_intra_doc_links             = "deny"
bare_urls                           = "deny"
invalid_html_tags                   = "deny"
invalid_codeblock_attributes        = "deny"
unescaped_backticks                 = "deny"
