[package]
name = "chutoro-benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chutoro-core = { path = "../chutoro-core" }
flate2 = "1.1.9"
rand = { version = "0.8.5", features = ["small_rng"] }
strsim = "0.11.1"
thiserror = "1.0.69"
ureq = "3.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.23"

[[bench]]
name = "hnsw"
harness = false

[[bench]]
name = "hnsw_ef_sweep"
harness = false

[[bench]]
name = "edge_harvest"
harness = false

[[bench]]
name = "mst"
harness = false

[[bench]]
name = "extraction"
harness = false

# This crate does NOT inherit workspace lints.  Criterion's generated code
# (criterion_group!, criterion_main!, bench_with_input closures) triggers many
# of the strict workspace denials — most notably `unwrap_used`, `expect_used`,
# `missing_docs`, `shadow_reuse`, and `excessive_nesting`.  A crate-local lint
# section mirrors the workspace strictness for handwritten library code while
# allowing benchmark files to use tightly scoped `#[expect(…)]` attributes for
# the lints that Criterion's macro expansions unavoidably trigger.
#
# When the workspace lint configuration changes, this section should be reviewed
# and updated to stay in sync.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 3. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
unknown_lints                       = "deny"
renamed_and_removed_lints           = "deny"
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
broken_intra_doc_links              = "deny"
private_intra_doc_links             = "deny"
bare_urls                           = "deny"
invalid_html_tags                   = "deny"
invalid_codeblock_attributes        = "deny"
unescaped_backticks                 = "deny"
