[package]
name = "chutoro-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.69"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dependencies.chutoro-core]
version = "0.1.0"
path = "../chutoro-core"

[dependencies.chutoro-providers-dense]
version = "0.1.0"
path = "../chutoro-providers/dense"

[dependencies.chutoro-providers-text]
version = "0.1.0"
path = "../chutoro-providers/text"

[dev-dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
parquet = { version = "57.0.0", features = ["arrow"] }
rstest = "0.23"
tempfile = "3.10"

[dev-dependencies.chutoro-test-support]
path = "../chutoro-test-support"
