[package]
name = "chutoro-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["cpu"]
cpu = ["dep:rand", "dep:rayon"]
skeleton = []
gpu = []

[package.metadata.docs.rs]
features = ["skeleton", "gpu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], optional = true }
rayon = { version = "1.10.0", optional = true }
thiserror = "1.0.69"
tracing = { version = "0.1.41", features = ["attributes"] }

[dev-dependencies]
rstest = "0.23"
rstest-bdd = "0.1.0-alpha4"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

[dev-dependencies.chutoro-test-support]
version = "0.1.0"
path = "../chutoro-test-support"
