[package]
name = "chutoro-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["cpu"]
cpu = ["dep:rand", "dep:rayon"]
metrics = ["dep:metrics"]
skeleton = []
gpu = []

[package.metadata.docs.rs]
features = ["skeleton", "gpu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dashmap = "6.1.0"
lru = "0.12.3"
metrics = { version = "0.24.0", optional = true }
rand = { version = "0.8.5", features = ["small_rng"], optional = true }
rayon = { version = "1.10.0", optional = true }
thiserror = "1.0.69"
tracing = { version = "0.1.41", features = ["attributes"] }

[dev-dependencies]
proptest = "1.8.0"
rstest = "0.23"
test-strategy = "0.4.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

[dev-dependencies.chutoro-test-support]
version = "0.1.0"
path = "../chutoro-test-support"
