[package]
name = "chutoro-test-support"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-std = { version = "4.0.2", features = ["fs_utf8"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "registry"] }

[dev-dependencies]
camino = "1.2.2"
rstest = "0.26"
