[package]
name = "chutoro-providers-dense"
version = "0.1.0"
edition = "2024"

[features]
default = ["simd_avx2", "simd_avx512", "simd_neon"]
nightly_portable_simd = []
simd_avx2 = []
simd_avx512 = []
simd_neon = []

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
thiserror = "2.0.17"
[dependencies.chutoro-core]
version = "0.1.0"
path = "../../chutoro-core"
default-features = false
features = ["skeleton"]

[dev-dependencies]
bytes = "1.10"
rstest = "0.26"
trybuild = "1.0"
