[package]
name = "chutoro-providers-text"
version.workspace = true
edition.workspace = true

[dependencies]
[dependencies.strsim]
version = "0.11.1"
[dependencies.thiserror]
version = "2.0.17"
[dependencies.chutoro-core]
version = "0.1.0"
path = "../../chutoro-core"
default-features = false
features = ["skeleton"]

[dev-dependencies]
rstest = "0.23"
